Squashed commit of the following:
    Updated the supported python versions list.
    Fixed regression in displaying xposts. #173.
    Fixing a few style things.
    Added a more robust test for the tornado handler.
    Trying without pytest-cov
    Updated travis for coverage.
    Remove python 3.2 support because no unicode literals, following what praw supports.
    "Side effect is not iterable."
    Added requirements for travis.
    Renamed travis file correctly.
    Adding test configurations, got tox working.
    Adding vcr cassettes to the repo.
    Renamed requirements files.
    Split up tests and cleaned up test names.
    Tests done, still one failure.
    Treat cassettes as binary to prevent bad merging.
    Fixed a few broken tests.
    Added a timeout to notifications.
    Prepping subreddit page.
    Finished submission page tests.
    Working on submission tests.
    Fixed vcr matching on urls with params, started submission tests.
    Log cleanup.
    Still trying to fix a broken test.
    -Fixed a few pytest bugs and tweaked logging.
    Still working on subscription tests.
    Finished page tests, on to subscription page.
    Finished content tests and starting page tests.
    Added the test refresh-token file to gitignore.
    Moved functional test file out of the repository.
    Continuing work on subreddit content tests.
    Tests now match module names, cassettes are split into individual tests for faster loading.
    Linter fixes.
    Cleanup.
    Added support for nested loaders.
    Added pytest options, starting subreddit content tests.
    Back on track with loader, continuing content tests.
    Finishing submission content tests and discovered snag with loader exception handling.
    VCR up and running, continuing to implement content tests.
    Playing around with vcr.py
    Moved helper functions into terminal and new objects.py
    Fixed a few broken tests.
    Working on navigator tests.
    Reorganizing some things.
    Mocked webb

--- a/rtv/templates/index.html
+++ b/rtv/templates/index.html
@@ -28,9 +28,10 @@
     {% if error == 'access_denied' %}
         <h1 style="color: red">Access Denied</h1><hr>
         <p><span style="font-weight: bold">Reddit Terminal Viewer</span> was denied access and will continue to operate in unauthenticated mode, you can close this window.
-    {% elif error != 'placeholder' %}
-        <h1 style="color: red">Error : {{ error }}</h1>
-    {% elif (state == 'placeholder' or code == 'placeholder') %}
+    {% elif error is not None %}
+        <h1 style="color: red">Error</h1><hr>
+        <p>{{ error }}</p>
+    {% elif (state is None or code is None) %}
         <h1>Wait...</h1><hr>
         <p>This page is supposed to be a Reddit OAuth callback. You can't just come here hands in your pocket!</p>
     {% else %}
