--- a/rtv/templates/index.html
+++ b/rtv/templates/index.html
@@ -25,20 +25,7 @@
     </style>
 </head>
 <body>
-    {% if error == 'access_denied' %}
-        <h1 style="color: red">Access Denied</h1><hr>
-        <p><span style="font-weight: bold">Reddit Terminal Viewer</span> was denied access and will continue to operate in unauthenticated mode, you can close this window.
-    {% elif error is not None %}
-        <h1 style="color: red">Error</h1><hr>
-        <p>{{ error }}</p>
-    {% elif (state is None or code is None) %}
-        <h1>Wait...</h1><hr>
-        <p>This page is supposed to be a Reddit OAuth callback. You can't just come here hands in your pocket!</p>
-    {% else %}
-        <h1 style="color: green">Access Granted</h1><hr>
-        <p><span style="font-weight: bold">Reddit Terminal Viewer</span> will now log in, you can close this window.</p>
-    {% end %}
-
+${message}
     <div id="footer">View the <a href="http://www.github.com/michael-lazar/rtv">Documentation</a></div>
 </body>
 </html>
